# needle

./: .gitignore  README.md  pyproject.toml  run_cifa.py  run_language_model.py  setup.py
apps/: mlp_resnet.py  models.py  run_cifa.py  run_language_model.py  run_transformer.py  simple_ml.py
needle/: autograd.py  backend_numpy.py  optim.py
needle/backend_ndarray/: ndarray.py  ndarray_backend_numpy.py
needle/data/: data_basic.py  data_transforms.py
needle/data/datasets/: __init__.py  cifar10_dataset.py  mnist_dataset.py  ptb_dataset.py
needle/init/: init_initializers.py
needle/nn/: __init__.py  nn_basic.py  nn_conv.py  nn_sequence.py  nn_transformer.py
needle/ops/: ops_logarithmic.py  ops_mathematic.py
src/cpu/: CMakeLists.txt  ndarray_backend_cpu.cc
src/gpu/: CMakeLists.txt  ndarray_backend_cuda.cu
tests/: simple_ml.py  test_autograde.py  test_cifar_ptb_data.py  test_conv.py  test_data.py  test_nd_backend.py  test_ndarray.py  test_nn_and_optim.py  test_sequence_models.py
tests/hw4_extra/: test_transformer.py
tools/: download_data.py
