[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "needle"
version = "0.0.1"
dependencies = [
  "numpy",
  "numdifftools"
]
requires-python = ">=3.12"
description = "A tiny neuron network framework"
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]